// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item Infobox Item infobox should be generated 1`] = `
"{{New Content}}
{{Infobox Item
|name = Test Item
|image = [[File:Test Item.png]]
|members = Yes
|quest = No
|exchange = Yes
|tradeable = Yes
|bankable = No
|equipable = No
|stackable = No
|noteable = No
|options = Test Action
|examine = Examine text.
|value = 
|weight = 0.000
|id = 1234
}}
[[File:Test Item detail.png|130px|left]]
'''Test Item'''"
`;

exports[`Item Infobox Item infobox should be generated with cape bonuses 1`] = `
"{{New Content}}
{{Infobox Item
|name = Test Item
|image = [[File:Test Item.png]]
|members = Yes
|quest = No
|exchange = Yes
|tradeable = Yes
|bankable = No
|equipable = Yes
|stackable = No
|noteable = No
|options = Test Action
|examine = Examine text.
|value = 
|weight = 0.000
|id = 1234
}}
[[File:Test Item detail.png|130px|left]]
'''Test Item'''

==Combat stats==
{{Infobox Bonuses
|astab = 0
|aslash = 0
|acrush = 0
|amagic = 0
|arange = 0
|dstab = +1
|dslash = +1
|dcrush = +1
|dmagic = +1
|drange = +1
|str = 0
|rstr = 0
|mdmg = 0
|prayer = 0
|slot = cape
|image = [[File:Test Item equipped male.png]]
|altimage = [[File:Test Item equipped female.png]]
}}

"
`;

exports[`Item Infobox Item infobox should be generated with head wearpos 1`] = `
"{{New Content}}
{{Infobox Item
|name = Test Item
|image = [[File:Test Item.png]]
|members = Yes
|quest = No
|exchange = Yes
|tradeable = Yes
|bankable = No
|equipable = Yes
|stackable = No
|noteable = No
|options = Test Action
|examine = Examine text.
|value = 
|weight = 0.000
|id = 1234
}}
[[File:Test Item detail.png|130px|left]]
'''Test Item'''

==Combat stats==
{{Infobox Bonuses
|astab = 0
|aslash = 0
|acrush = 0
|amagic = 0
|arange = 0
|dstab = +1
|dslash = +1
|dcrush = +1
|dmagic = +1
|drange = +1
|str = 0
|rstr = 0
|mdmg = 0
|prayer = 0
|slot = head
|image = [[File:Test Item equipped male.png]]
|altimage = [[File:Test Item equipped female.png]]
}}

"
`;

exports[`Item Infobox Item infobox should be generated with ranged ammo strength bonuses 1`] = `
"{{New Content}}
{{Infobox Item
|name = Test Item
|image = [[File:Test Item.png]]
|members = Yes
|quest = No
|exchange = Yes
|tradeable = Yes
|bankable = No
|equipable = Yes
|stackable = No
|noteable = No
|options = Test Action
|examine = Examine text.
|value = 
|weight = 0.000
|id = 1234
}}
[[File:Test Item detail.png|130px|left]]
'''Test Item'''

==Combat stats==
{{Infobox Bonuses
|astab = 0
|aslash = 0
|acrush = 0
|amagic = 0
|arange = +75
|dstab = 0
|dslash = 0
|dcrush = 0
|dmagic = 0
|drange = 0
|str = 0
|rstr = +35
|mdmg = 0
|prayer = 0
|slot = weapon
|speed = 4
|attackrange = 5
|combatstyle = Whip
|image = [[File:Test Item equipped male.png]]
|altimage = [[File:Test Item equipped female.png]]
}}

{{CombatStyles|speed=4|attackrange=5|combatstyle=Whip}}

"
`;

exports[`Item Infobox Item infobox should be generated with ranged equipment strength bonuses 1`] = `
"{{New Content}}
{{Infobox Item
|name = Test Item
|image = [[File:Test Item.png]]
|members = Yes
|quest = No
|exchange = Yes
|tradeable = Yes
|bankable = No
|equipable = Yes
|stackable = No
|noteable = No
|options = Test Action
|examine = Examine text.
|value = 
|weight = 0.000
|id = 1234
}}
[[File:Test Item detail.png|130px|left]]
'''Test Item'''

==Combat stats==
{{Infobox Bonuses
|astab = 0
|aslash = 0
|acrush = 0
|amagic = 0
|arange = +75
|dstab = 0
|dslash = 0
|dcrush = 0
|dmagic = 0
|drange = 0
|str = 0
|rstr = +42
|mdmg = 0
|prayer = 0
|slot = weapon
|speed = 4
|attackrange = 5
|combatstyle = Whip
|image = [[File:Test Item equipped male.png]]
|altimage = [[File:Test Item equipped female.png]]
}}

{{CombatStyles|speed=4|attackrange=5|combatstyle=Whip}}

"
`;

exports[`Item Infobox Item infobox should be generated with weapon bonuses 1`] = `
"{{New Content}}
{{Infobox Item
|name = Test Item
|image = [[File:Test Item.png]]
|members = Yes
|quest = No
|exchange = Yes
|tradeable = Yes
|bankable = No
|equipable = Yes
|stackable = No
|noteable = No
|options = Test Action
|examine = Examine text.
|value = 
|weight = 0.000
|id = 1234
}}
[[File:Test Item detail.png|130px|left]]
'''Test Item'''

==Combat stats==
{{Infobox Bonuses
|astab = +1
|aslash = +1
|acrush = +1
|amagic = +1
|arange = +1
|dstab = 0
|dslash = 0
|dcrush = 0
|dmagic = 0
|drange = 0
|str = 0
|rstr = 0
|mdmg = 0
|prayer = 0
|slot = weapon
|speed = 3
|attackrange = 2
|combatstyle = Whip
|image = [[File:Test Item equipped male.png]]
|altimage = [[File:Test Item equipped female.png]]
}}

{{CombatStyles|speed=3|attackrange=2|combatstyle=Whip}}

"
`;

exports[`Item Infobox Item infobox should not set image and altimage for Ammo wearpos 1`] = `
"{{New Content}}
{{Infobox Item
|name = Test Item
|image = [[File:Test Item.png]]
|members = Yes
|quest = No
|exchange = Yes
|tradeable = Yes
|bankable = No
|equipable = Yes
|stackable = No
|noteable = No
|options = Test Action
|examine = Examine text.
|value = 
|weight = 0.000
|id = 1234
}}
[[File:Test Item detail.png|130px|left]]
'''Test Item'''

==Combat stats==
{{Infobox Bonuses
|astab = 0
|aslash = 0
|acrush = 0
|amagic = 0
|arange = 0
|dstab = 0
|dslash = 0
|dcrush = 0
|dmagic = 0
|drange = 0
|str = 0
|rstr = 0
|mdmg = 0
|prayer = 0
|slot = ammot
}}

"
`;

exports[`Item Infobox Item infobox should not set image and altimage for Ring wearpos 1`] = `
"{{New Content}}
{{Infobox Item
|name = Test Item
|image = [[File:Test Item.png]]
|members = Yes
|quest = No
|exchange = Yes
|tradeable = Yes
|bankable = No
|equipable = Yes
|stackable = No
|noteable = No
|options = Test Action
|examine = Examine text.
|value = 
|weight = 0.000
|id = 1234
}}
[[File:Test Item detail.png|130px|left]]
'''Test Item'''

==Combat stats==
{{Infobox Bonuses
|astab = 0
|aslash = 0
|acrush = 0
|amagic = 0
|arange = 0
|dstab = 0
|dslash = 0
|dcrush = 0
|dmagic = 0
|drange = 0
|str = 0
|rstr = 0
|mdmg = 0
|prayer = 0
|slot = ring
}}

"
`;

exports[`Item Infobox Item infobox with sub ops 1`] = `
"{{New Content}}
{{Infobox Item
|name = Test Item
|image = [[File:Test Item.png]]
|members = Yes
|quest = No
|exchange = Yes
|tradeable = Yes
|bankable = No
|equipable = No
|stackable = No
|noteable = No
|options = Test Action 1 (Sub Action 1), Test Action 2 (Sub Action 2.1, Sub Action 2.2), Test Action 3
|examine = Examine text.
|value = 
|weight = 0.000
|id = 1234
}}
[[File:Test Item detail.png|130px|left]]
'''Test Item'''"
`;
